--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -78,7 +78,7 @@
 .todo-list li label .description {
     word-break: break-all;
     display: block;
-    line-height: 1.2;
+    /*line-height: 1.2;*/
     transition: color 0.4s;
     font-weight: 400;
     color: #4d4d4d;
